@@ -32,6 +32,7 @@ class ALSPlugin : public Plugin
 {
 private:
     void Register(class Loader& l);
+    void Init(class Loader& l);
     QStringList Dependencies();
 };
 
