@@ -53,7 +53,7 @@ private:
     AbstractChain* compassChain;
     BufferReader<CompassData> compassReader;
     HeadingFilter headingFilter;
-
+    int sessionId;
 };
 
 #endif
